# deploy-rs-tui

./: CLAUDE.md  Cargo.toml  README.md  flake.nix
src/: app.rs  deploy.rs  event.rs  flake.rs  host.rs  lib.rs  main.rs  ssh.rs  ui.rs
tests/: deploy_run.rs  flake_discover.rs
