[package]
name = "deploy-rs-tui"
version = "0.1.0"
edition = "2021"
description = "A terminal UI wrapper around serokell/deploy-rs"
license = "MIT"

[[bin]]
name = "deploy-rs-tui"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.28", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
